# clutchreframe-roi-filter

./: .gitignore  CMakeLists.txt  COPYING  IPC_REFERENCE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
data/locale/: en-US.ini
include/: plugin_version.h  roi_frame_msg_v1.h  roi_interpolator.h  roi_ipc_client.h
src/: plugin-main.c  plugin-version.rc  roi_filter_source.c  roi_interpolator.c  roi_ipc_client.c
